@@ -1,3 +1,8 @@
+2010-09-15  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/45577
+	* gfortran.dg/allocate_derived_4.f90: New.
+
 2010-09-15  Tejas Belagod  <tejas.belagod@arm.com>
 
 	* lib/target-supports.exp
